feat(dominio): temporadas como Entity central, equipos/posiciones por temporada y FK pais_id
- Temporada pasa a Entity con identidad, estado PLANIFICADA/ACTIVA/FINALIZADA y metodos activar/finalizar
- Liga delega equipos/posiciones en temporada vigente y gana paisId (FK real ligas.pais_id -> paises.id)
- Partido y DetalleFuenteExtraccion referencian temporadaId (JOIN por liga para compatibilidad)
- Equipo gana logoUrl opcional (fuente #6)
- Persistencia: equipos.temporada_id, posiciones_tabla.temporada_id, ligas.pais_id; TemporadaEntity compone equipos/posiciones
- Adapters JPA mapean por temporada; Wplay resuelve URL por temporada; queries por liga via JOIN interno
- Liga.activar() transita PLANIFICADA->ACTIVA en su temporada vigente (H-01)
- 411 tests en verde en este punto